# master_thesis

./: .gitignore
cscmm/: agnn_model.py  agnn_model_old.py  cscmm_bench.sh  cscmm_ratio_bench.sh  gat_model_old.py  kernels_gat.py  unified_single_bench.py  va_model.py  va_model_old.py
cscmm/kronecker/: Makefile.inc  graph.c
gnns-scaling/data/: .gitkeep  kronecker_dgl_res_bs4096.csv  kronecker_dgl_res_bs512.csv  kronecker_dgl_res_bs8192.csv  kronecker_strong_this_work.csv  kronecker_weak_k128_training_bs16384.csv  kronecker_weak_this_work.csv  results.csv  uniform_dgl_res_bs8192.csv  uniform_dgl_res_bs8192_rerun.csv
gnns-scaling/data/kronecker/: kronecker_dace_gpu_128_nodes.csv  kronecker_dace_gpu_16_nodes.csv  kronecker_dace_gpu_1_nodes.csv  kronecker_dace_gpu_2_nodes.csv  kronecker_dace_gpu_32_nodes.csv  (+3 more)
gnns-scaling/plots/: additional_data_loader.py  create_plots.py  create_plots_after_sc.py
gnns-scaling/src/: NeighborSampler.py  train_dist.py  train_norm.py
gnns-scaling/src/blas/: CMakeLists.txt  main.cpp  run_bench.cpp
gnns-scaling/src/blas/include/: avg_semiring.h  graphblas_demos.h  loading.h  matrix_utils.h  timer.h
kernel_opt/: AGNN_kernel.py  GAT_kernel.py  VA_kernel.py  benchmark.py  cupy_kernel.py  cupy_shfl.py  dace_kernel.py  kernel_bench.sh  test_reduction.py  utils.py
kernel_opt/kronecker/: Makefile  generate_kronecker_data.py  main.c
results/comm_comp/: plot.ipynb  plot.py  results.csv
results/cscmm/: plot.ipynb  results.csv
results/kernel_opt/: results.csv
results/scaling/: results_strong.csv  results_weak.csv
(+259 files in other folders)
